added property stats cards
