# apps/api/src/property/property.controller.ts
@@ -6,6 +6,7 @@ import { PropertyService } from 'lib/services/property/property.service';
 import {
   CreatePropertyDto,
   PropertyResult,
+  PropertyStatsResult,
   RResponse,
 } from 'lib/types/property.types';
 
@@ -32,9 +33,16 @@ export class PropertyController {
     return (await this.propertyService.getById(id)) as PropertyResult;
   }
 
+  @ApiOkResponse({type : [PropertyResult]})
   @Get('owner/:ownerId')
-  async getByOwner(@Param('ownerId') ownerId: string): Promise<IProperty[]> {
+  async getByOwner(@Param('ownerId') ownerId: string): Promise<PropertyResult[]> {
     const res = await this.propertyService.getByOwnerId(ownerId);
-    return res;
+    return res as PropertyResult[];
+  }
+
+  @ApiOkResponse({ type : PropertyStatsResult })
+  @Get('owner/stats/:ownerId')
+  async getOwnerStats(@Param('ownerId') ownerId : string ) : Promise<PropertyStatsResult>{
+    return await this.propertyService.getOwnerPropertyStats(ownerId) as PropertyStatsResult;
   }
 }
